// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapshotManagementReducer should handle DELETE_FAILURE 1`] = `
Object {
  "hasError": false,
  "isLoading": false,
  "isWorking": false,
  "snapshots": Array [
    Object {
      "children_ids": null,
      "created_at": "2021-01-19 15:03:47 UTC",
      "description": "123 testSnapshot",
      "id": "snapshot-15776",
      "name": "test",
      "parent_id": null,
    },
  ],
}
`;

exports[`SnapshotManagementReducer should handle DELETE_REQUEST 1`] = `
Object {
  "hasError": false,
  "isLoading": false,
  "isWorking": true,
  "snapshots": Array [
    Object {
      "children_ids": null,
      "created_at": "2021-01-19 15:03:47 UTC",
      "description": "123 testSnapshot",
      "id": "snapshot-15776",
      "name": "test",
      "parent_id": null,
    },
  ],
}
`;

exports[`SnapshotManagementReducer should handle DELETE_SUCCESS 1`] = `
Object {
  "hasError": false,
  "isLoading": false,
  "isWorking": false,
  "snapshots": Array [
    Object {
      "children_ids": null,
      "created_at": "2021-01-19 15:03:47 UTC",
      "description": "123 testSnapshot",
      "id": "snapshot-15776",
      "name": "test",
      "parent_id": null,
    },
  ],
}
`;

exports[`SnapshotManagementReducer should handle LIST_FAILURE 1`] = `
Object {
  "error": Object {
    "message": "Something went wrong",
  },
  "hasError": true,
  "isLoading": false,
  "isWorking": false,
  "needsReload": false,
  "snapshots": Array [
    Object {
      "children_ids": null,
      "created_at": "2021-01-19 15:03:47 UTC",
      "description": "123 testSnapshot",
      "id": "snapshot-15776",
      "name": "test",
      "parent_id": null,
    },
  ],
}
`;

exports[`SnapshotManagementReducer should handle LIST_REQUEST 1`] = `
Object {
  "hasError": false,
  "isLoading": true,
  "isWorking": false,
  "needsReload": false,
  "snapshots": Array [],
}
`;

exports[`SnapshotManagementReducer should handle LIST_SUCCESS 1`] = `
Object {
  "hasError": false,
  "isLoading": false,
  "isWorking": false,
  "needsReload": false,
  "snapshots": Array [],
}
`;

exports[`SnapshotManagementReducer should handle ROLLBACK_FAILURE 1`] = `
Object {
  "hasError": false,
  "isLoading": false,
  "isWorking": false,
  "snapshots": Array [
    Object {
      "children_ids": null,
      "created_at": "2021-01-19 15:03:47 UTC",
      "description": "123 testSnapshot",
      "id": "snapshot-15776",
      "name": "test",
      "parent_id": null,
    },
  ],
}
`;

exports[`SnapshotManagementReducer should handle ROLLBACK_REQUEST 1`] = `
Object {
  "hasError": false,
  "isLoading": false,
  "isWorking": true,
  "snapshots": Array [
    Object {
      "children_ids": null,
      "created_at": "2021-01-19 15:03:47 UTC",
      "description": "123 testSnapshot",
      "id": "snapshot-15776",
      "name": "test",
      "parent_id": null,
    },
  ],
}
`;

exports[`SnapshotManagementReducer should handle ROLLBACK_SUCCESS 1`] = `
Object {
  "hasError": false,
  "isLoading": false,
  "isWorking": false,
  "snapshots": Array [
    Object {
      "children_ids": null,
      "created_at": "2021-01-19 15:03:47 UTC",
      "description": "123 testSnapshot",
      "id": "snapshot-15776",
      "name": "test",
      "parent_id": null,
    },
  ],
}
`;

exports[`SnapshotManagementReducer should handle UPDATE_FAILURE 1`] = `
Object {
  "hasError": false,
  "isLoading": false,
  "isWorking": false,
  "snapshots": Array [
    Object {
      "children_ids": null,
      "created_at": "2021-01-19 15:03:47 UTC",
      "description": "123 testSnapshot",
      "id": "snapshot-15776",
      "name": "test",
      "parent_id": null,
    },
  ],
}
`;

exports[`SnapshotManagementReducer should handle UPDATE_REQUEST 1`] = `
Object {
  "hasError": false,
  "isLoading": false,
  "isWorking": true,
  "snapshots": Array [
    Object {
      "children_ids": null,
      "created_at": "2021-01-19 15:03:47 UTC",
      "description": "123 testSnapshot",
      "id": "snapshot-15776",
      "name": "test",
      "parent_id": null,
    },
  ],
}
`;

exports[`SnapshotManagementReducer should handle UPDATE_SUCCESS 1`] = `
Object {
  "hasError": false,
  "isLoading": false,
  "isWorking": false,
  "snapshots": Array [
    Object {
      "children_ids": null,
      "created_at": "2021-01-19 15:03:47 UTC",
      "description": "My most important snapshot.",
      "id": "snapshot-15776",
      "name": "test snapshot",
      "parent_id": null,
    },
  ],
}
`;

exports[`SnapshotManagementReducer should return initial state 1`] = `
Object {
  "hasError": false,
  "isLoading": true,
  "isWorking": false,
  "snapshots": Array [],
}
`;
